# Zam

./: .env.example  .gitignore  Dockerfile  Dockerfile.xvfb  LICENSE  README.md  docker-compose.yml  entrypoint-xvfb.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
src/: __init__.py  configs.py  creds.json  db_conf.json  gpt_model.py  main.py  main_tweet_sender.py  migrations.py  ocr.py  scrapebadger_client.py  telegram_backend.py  twitter_backend.py  utils.py  video_downloader.py  webdriver.py
src/.wdm/: drivers.json
src/database/: __init__.py  database.py  init.sql
tests/: __init__.py  conftest.py  test_database.py  test_extract_quote.py  test_integration.py  test_quote_extraction.py  test_twitter_backend.py  test_utils.py
tweetcapture/: pyproject.toml
tweetcapture/tweetcapture/: __init__.py  cli.py  config.py  screenshot.py
tweetcapture/tweetcapture/examples/: tweet_screenshot.py  tweet_screenshot_concurrent.py  tweet_screenshot_to_instagram.py
tweetcapture/tweetcapture/tests/: test_screenshot.py
tweetcapture/tweetcapture/utils/: __init__.py  utils.py  video.py  webdriver.py
