[project]
name = "tweetcapture"
version = "0.2.5"
description = "Take a tweet screenshot"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Alperen Çetin", email = "xacnio@pm.me" }
]
keywords = ["tweet", "screenshot"]

dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=3.8.5",
    "packaging",
    "Pillow>=9.3.0",
]

[project.scripts]
tweetcapture = "tweetcapture.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tweetcapture"]
